[project]
name = "dml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.22.0",
    "optuna>=4.7.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "tushare>=1.2.60",
    "xgboost>=1.7.0",
    "yfinance>=0.1.70",
]
